# Abyss-Echoes

./: abyss  game_cli.py  pyproject.toml
data/: content.json  save.json  skills.json  speed-system.json
docs/: README.md  runtime-rules.md  speed-system.md
docs/ai-context/: abyss-echoes-redesign-v2.md  cli-auto-battler-design.md  cli-ui-optimization.md  single-character-mage-loot-rpg-design.md
docs/data/: aspects.json  equipment-system.json  game-rules.json  heroes.json  items.initial.json
save/: player-save.initial.json
src/abyss_echoes/: __init__.py  __main__.py  cli.py  i18n.py
src/abyss_echoes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/abyss_echoes/content/: README.md  __init__.py  heroes.json  items.json  schema.py  skills.json  yaml_loader.py
src/abyss_echoes/engine/: __init__.py  battle.py  content_loader.py  models.py
src/abyss_echoes/loot/: __init__.py  config.py  evaluator.py  models.py  presentation.py
src/abyss_echoes/player/: __init__.py  profile.py
tests/engine/: __init__.py  test_battle.py
tests/loot/: factories.py  test_drop_actions.py  test_drop_presentation.py  test_drop_protection.py  test_drop_verdicts.py
