[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "abyss-echoes"
version = "0.1.0"
description = "Python CLI auto-battler prototype"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
abyss = "abyss_echoes.cli:main"
abyss-echoes = "abyss_echoes.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
